[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://src/Ball/ball.png" type="Texture" id=2]
[ext_resource path="res://src/Ball/ball_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Ball/explosion.wav" type="AudioStream" id=4]


[sub_resource type="CircleShape2D" id=1]
radius = 32.1266

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/explosion.png-252a7f9da59fe287c2275a2d88654b69.stex"

[sub_resource type="Curve" id=3]
resource_local_to_scene = true
min_value = 1.0
max_value = 5.0
_data = [ Vector2( 0.00352113, 2.94091 ), 0.0, 0.0, 0, 0, Vector2( 0.68662, 3.55909 ), -23.616, -23.616, 0, 0, Vector2( 1, 2.94091 ), -30.9818, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.563218, 0.846743, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.180392, 0, 0, 0, 1 )

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/explosion.png-252a7f9da59fe287c2275a2d88654b69.stex"

[sub_resource type="Curve" id=6]
resource_local_to_scene = true
min_value = 1.0
max_value = 5.0
_data = [ Vector2( 0, 5 ), 0.0, 0.0, 0, 0, Vector2( 0.102113, 5 ), -206.546, -206.546, 0, 0, Vector2( 0.126761, 3.98182 ), 0.983551, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.563218, 0.846743, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.180392, 0, 0, 0, 1 )

[node name="Ball" type="RigidBody2D"]
gravity_scale = 10.0
contacts_reported = 6
contact_monitor = true
script = ExtResource( 1 )

[node name="BallTexture" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 2 )

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
texture = SubResource( 2 )
emission_shape = 1
emission_sphere_radius = 30.0
flag_align_y = true
direction = Vector2( 0, 0 )
gravity = Vector2( 0, -98 )
radial_accel = 5.0
tangential_accel = 15.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Impact" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
texture = SubResource( 5 )
emission_shape = 1
emission_sphere_radius = 30.0
flag_align_y = true
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
radial_accel = 5.0
tangential_accel = 15.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -40.0

[node name="Explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Ball"
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_Ball_sleeping_state_changed"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
